--- a/style.css
+++ b/style.css
@@ -160,6 +160,10 @@ body {
   color: #ffffff;
 }
 
+.row {
+  margin: 0 0 48px 0;
+}
+
 #first-item {
   margin-top: 39px;
 }
@@ -222,87 +226,6 @@ body {
   margin-top: 15px;
   margin-bottom: 25px;
 }
-
-/* SECOND PAGE */
-
-/* .first-banner {
-  position: relative;
-  margin-top: 70px;
-  height: 364px;
-}
-
-.first-banner .img-container {
-  height: 364px;
-  overflow: hidden;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-}
-
-.img-container {
-  background-image: url(img/main-banner.png);
-  background-attachment: fixed;
-  background-size: cover;
-}
-
-@media (max-width: 767px) .first-banner .img-container {
-  height: 250px;
-}
-
-.first-banner img {
-  width: 100%;
-}
-
-.first-banner .card-parent {
-  display: inline-block;
-  position: relative;
-  margin-top: 80px;
-}
-
-.rest-card {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  background: #ffffff;
-  box-shadow: 0px 0px 16px rgba(117, 117, 117, 0.2);
-  border-radius: 2px;
-}
-
-.card-parent .card-title {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 36px;
-  line-height: 42px;
-  display: flex;
-  justify-content: center;
-  margin: 38px 38px 62px 38px;
-}
-
-.delivary-time p {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 13px;
-  line-height: 15px;
-  color: #ffffff;
-  text-align: center;
-  padding: 8px 16px;
-}
-
-.background-time {
-  background-color: #262626;
-  border-radius: 16px;
-  width: 100px;
-  height: 32px;
-}
-
-.card-content {
-  display: flex;
-  justify-content: space-around;
-} */
 
 .cafe-hero {
   margin-top: 70px;
@@ -481,4 +404,17 @@ p {
 
 .menu {
   margin-bottom: 31px;
+}
+
+.fixed-back-link {
+  position: fixed;
+  height: 80px;
+  width: 80px;
+  background-color: #59bd5a;
+  bottom: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
 }
