--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body {
 }
 
 .card {
-  padding: 0;
+  padding: 0 0 20px 0;
   margin: 0;
   transition: transform 0.1s linear;
   border-radius: 2px;
